--- a/job listings/jobs 5.html
+++ b/job listings/jobs 5.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <script src="script.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
@@ -44,7 +46,7 @@
             <div class="bg-white p-4 shadow-md rounded-lg">
                 <h3 class="text-lg font-bold">Machine Operator</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> $80,000/year</p>
+                <p><strong>Salary:</strong> $49,500/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -52,7 +54,7 @@
             <div class="bg-white p-4 shadow-md rounded-lg">
                 <h3 class="text-lg font-bold">Electrician</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $60,000/year</p>
+                <p><strong>Salary:</strong> $73,000/year</p>
                 <p><strong>Type:</strong> Part-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -68,7 +70,7 @@
             <div class="bg-white p-4 shadow-md rounded-lg">
                 <h3 class="text-lg font-bold">Instrument technician</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $95,000/year</p>
+                <p><strong>Salary:</strong> $85,000/year</p>
                 <p><strong>Type:</strong> Contract</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -76,7 +78,7 @@
             <div class="bg-white p-4 shadow-md rounded-lg">
                 <h3 class="text-lg font-bold">Maid & House Keeper</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $70,000/year</p>
+                <p><strong>Salary:</strong> $33,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -84,7 +86,7 @@
             <div class="bg-white p-4 shadow-md rounded-lg">
                 <h3 class="text-lg font-bold">Fitness coach</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> £45,000/year</p>
+                <p><strong>Salary:</strong> $48,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -92,7 +94,7 @@
             <div class="bg-white p-4 shadow-md rounded-lg">
                 <h3 class="text-lg font-bold">Security</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $85,000/year</p>
+                <p><strong>Salary:</strong> $55,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -100,7 +102,7 @@
             <div class="bg-white p-4 shadow-md rounded-lg">
                 <h3 class="text-lg font-bold">Fabricator</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> R600,000/year</p>
+                <p><strong>Salary:</strong> $58,000/year</p>
                 <p><strong>Type:</strong> Permanent</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -116,7 +118,7 @@
             <div class="bg-white p-4 shadow-md rounded-lg">
                 <h3 class="text-lg font-bold">Rigger</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> £45,000/year</p>
+                <p><strong>Salary:</strong> $63,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -124,7 +126,7 @@
             <div class="bg-white p-4 shadow-md rounded-lg">
                 <h3 class="text-lg font-bold">Welder 3g / 4g</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $85,000/year</p>
+                <p><strong>Salary:</strong> $55,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -132,7 +134,7 @@
             <div class="bg-white p-4 shadow-md rounded-lg">
                 <h3 class="text-lg font-bold">AC Technician</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> R600,000/year</p>
+                <p><strong>Salary:</strong> $65,000/year</p>
                 <p><strong>Type:</strong> Permanent</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -207,10 +209,18 @@
                 </div>
 
                 <div class="flex space-x-4 mt-6 text-gray-600 text-xl">
-                    <a href="#"><div class="bi bi-facebook"></div></a>
-                    <a href="#"><div class="bi bi-twitter"></div></a>
-                    <a href="#"><div class="bi bi-instagram"></div></a>
-                    <a href="#"><div class="bi bi-linkedin"></div></a>
+                    <a href="#">
+                        <div class="bi bi-facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-twitter"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-instagram"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-linkedin"></div>
+                    </a>
                 </div>
 
                 <div class="mt-4 text-gray-700 text-sm">
@@ -273,14 +283,15 @@
     </footer>
 
 
-<script>
-// navbar popup
-const menuBtn = document.getElementById('menu-btn');
-const mobileMenu = document.getElementById('mobile-menu');
+    <script>
+        // navbar popup
+        const menuBtn = document.getElementById('menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
 
-menuBtn.addEventListener('click', () => {
-    mobileMenu.classList.toggle('hidden');      
-});
-</script>
+        menuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
 </body>
+
 </html>
