--- a/job listings/jobs 6.html
+++ b/job listings/jobs 6.html
@@ -14,34 +14,26 @@
     <nav class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#" class="text-red-600 font-bold text-xl">
-                <img src="./assets/huskylogo-red.svg" class="w-40 h-30" alt="Husky Logo">
+                <img src="../assets/huskylogo-red.svg" class="w-40 h-30" alt="Husky Logo">
             </a>
             <!-- Desktop Menu -->
             <div class="hidden md:flex space-x-6">
-                <a href="index.html" class="text-gray-700 hover:text-red-600">Home</a>
-                <a href="jobs 1.html" class="text-gray-700 hover:text-red-600">Jobs</a>
-                <a href="contact.html" class="text-gray-700 hover:text-red-600">Contact</a>
-                <a href="about.html" class="text-gray-700 hover:text-red-600">About Us</a>
+                <a href="../index.html" class="text-gray-700 hover:text-red-600">Home</a>
+                <a href="../jobs 1.html" class="text-gray-700 hover:text-red-600">Jobs</a>
+                <a href="../contact.html" class="text-gray-700 hover:text-red-600">Contact</a>
+                <a href="../about.html" class="text-gray-700 hover:text-red-600">About Us</a>
             </div>
             <!-- Mobile Menu Button -->
             <button id="menu-btn" class="md:hidden text-gray-700 text-3xl focus:outline-none">☰</button>
         </div>
         <!-- Mobile Menu (Hidden by Default) -->
         <div id="mobile-menu" class="hidden absolute top-16 right-6 bg-white shadow-lg rounded-lg w-40 py-2 mt-4">
-            <a href="index.html" class="block px-4 py-2 text-gray-700 hover:text-red-600">Home</a>
-            <a href="jobs 1.html" class="block px-4 py-2 text-gray-700 hover:text-red-600">Jobs</a>
-            <a href="contact.html" class="block px-4 py-2 text-gray-700 hover:text-red-600">Contact</a>
-            <a href="about.html" class="block px-4 py-2 text-gray-700 hover:text-red-600">About</a>
+            <a href="../index.html" class="block px-4 py-2 text-gray-700 hover:text-red-600">Home</a>
+            <a href="../jobs 1.html" class="block px-4 py-2 text-gray-700 hover:text-red-600">Jobs</a>
+            <a href="../contact.html" class="block px-4 py-2 text-gray-700 hover:text-red-600">Contact</a>
+            <a href="../about.html" class="block px-4 py-2 text-gray-700 hover:text-red-600">About</a>
         </div>
     </nav>
-
-    <!-- Banner -->
-    <div class="relative w-full mt-10">
-        <img src="assets/Indian-student-in-Canada-1024x576.jpg" alt="Job Banner" class="w-full h-96 object-cover">
-        <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-            <h2 class="text-white text-2xl font-bold uppercase text-center px-6 md:px-4">Apply for Free Sponsorship Jobs</h2>
-        </div>
-    </div>
 
     <!-- Job Listings -->
     <section class="max-w-6xl mx-auto p-6">
@@ -51,23 +43,7 @@
         <div id="job-listings" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
             <!-- Job Listings with unique details -->
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Plastic Injection Molding</h3>
-                <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> $80,000/year</p>
-                <p><strong>Type:</strong> Full-time</p>
-                <a href="./apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
-            </div>
-
-            <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Machine Operator</h3>
-                <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $60,000/year</p>
-                <p><strong>Type:</strong> Part-time</p>
-                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
-            </div>
-
-            <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Site Engineer</h3>
+                <h3 class="text-lg font-bold">Administrator</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
                 <p><strong>Salary:</strong> $50,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
@@ -75,105 +51,81 @@
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Welder 3g, 4g, 5g</h3>
+                <h3 class="text-lg font-bold">Store Manager</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $95,000/year</p>
+                <p><strong>Salary:</strong> $60,000/year</p>
+                <p><strong>Type:</strong> Part-time</p>
+                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
+            </div>
+
+            <div class="bg-white p-4 shadow-md rounded-lg">
+                <h3 class="text-lg font-bold">Store Keeper</h3>
+                <p><strong>Location:</strong> Toronto, Canada</p>
+                <p><strong>Salary:</strong> $50,500/year</p>
+                <p><strong>Type:</strong> Full-time</p>
+                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
+            </div>
+
+            <div class="bg-white p-4 shadow-md rounded-lg">
+                <h3 class="text-lg font-bold">Electrical technician</h3>
+                <p><strong>Location:</strong> Ontario, Canada</p>
+                <p><strong>Salary:</strong> $65,000/year</p>
                 <p><strong>Type:</strong> Contract</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Tig Welder</h3>
+                <h3 class="text-lg font-bold">Safety Officer</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $70,000/year</p>
+                <p><strong>Salary:</strong> $78,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Mechanical supervisor</h3>
+                <h3 class="text-lg font-bold">CNC Operator</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> £45,000/year</p>
+                <p><strong>Salary:</strong> $55,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Mechanical Engineer</h3>
+                <h3 class="text-lg font-bold">Helper</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $85,000/year</p>
+                <p><strong>Salary:</strong> $38,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Power Operator</h3>
+                <h3 class="text-lg font-bold">NDT or QC Inspector</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> R600,000/year</p>
+                <p><strong>Salary:</strong> $75,500/year</p>
                 <p><strong>Type:</strong> Permanent</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">JCB Operator</h3>
+                <h3 class="text-lg font-bold">Civil Engineer</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> $80,000/year</p>
+                <p><strong>Salary:</strong> $99,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Heavy Driver</h3>
+                <h3 class="text-lg font-bold">Forklift Operator</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
+                <p><strong>Salary:</strong> $55,000/year</p>
+                <p><strong>Type:</strong> Full-time</p>
+                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
+            </div>
+
+            <div class="bg-white p-4 shadow-md rounded-lg">
+                <h3 class="text-lg font-bold">Shover Operator</h3>
+                <p><strong>Location:</strong> Toronto, Canada</p>
                 <p><strong>Salary:</strong> $60,000/year</p>
-                <p><strong>Type:</strong> Part-time</p>
-                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
-            </div>
-
-            <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Light Driver</h3>
-                <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> $50,000/year</p>
-                <p><strong>Type:</strong> Full-time</p>
-                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
-            </div>
-
-            <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Paper mill</h3>
-                <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $95,000/year</p>
-                <p><strong>Type:</strong> Contract</p>
-                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
-            </div>
-
-            <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Pipe fitter</h3>
-                <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $70,000/year</p>
-                <p><strong>Type:</strong> Full-time</p>
-                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
-            </div>
-
-            <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Mechanical foreman</h3>
-                <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> £45,000/year</p>
-                <p><strong>Type:</strong> Full-time</p>
-                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
-            </div>
-
-            <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">electrical supervisor</h3>
-                <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $85,000/year</p>
-                <p><strong>Type:</strong> Full-time</p>
-                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
-            </div>
-
-            <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Pipe foreman</h3>
-                <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> R600,000/year</p>
                 <p><strong>Type:</strong> Permanent</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -181,12 +133,12 @@
 
         <!-- Pagination -->
         <div class="flex justify-center mt-6 space-x-2">
-            <a href="#" class="px-4 py-2 bg-red-300 text-gray-700 rounded">1</a>
-            <a href="job listings/jobs 2.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">2</a>
-            <a href="job listings/jobs 3.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">3</a>
-            <a href="job listings/jobs 4.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">4</a>
-            <a href="job listings/jobs 5.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">5</a>
-            <a href="job listings/jobs 6.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">6</a>
+            <a href="../jobs 1.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">1</a>
+            <a href="jobs 2.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">2</a>
+            <a href="jobs 3.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">3</a>
+            <a href="jobs 4.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">4</a>
+            <a href="jobs 5.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">5</a>
+            <a href="#" class="px-4 py-2 bg-red-300 text-gray-700 rounded">6</a>
         </div>
     </section>
 
@@ -195,7 +147,7 @@
         <!-- Large Screen Footer -->
         <div class="hidden lg:block ">
             <div class="flex flex-col items-center py-6">
-                <img src="assets/huskylogo-red.svg" class="w-64 mb-2">
+                <img src="../assets/huskylogo-red.svg" class="w-64 mb-2">
             </div>
             <footer class="flex flex-col items-center justify-center text-left bg-white py-8">
                 <div class="flex justify-between w-4/5 max-w-6xl">
