--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deposit Page</title>
+    <title>About Us - Glazzom</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="">
+<body class="bg-gray-100">
 
     <!-- Navbar -->
     <nav class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
@@ -35,62 +35,32 @@
         </div>
     </nav>
 
-    <div class="flex items-center justify-center min-h-screen bg-gray-100">
-        <div class="bg-white shadow-md rounded-lg p-10 w-full max-w-sm">
-            <!-- Amount Input -->
-            <label class="block text-gray-600 text-md mb-2">How much do you want to deposit?</label>
-            <div class="relative">
-                <select class="absolute left-3 top-1/2 transform -translate-y-1/2 bg-transparent text-gray-600 focus:outline-none">
-                    <option selected>$</option>
-                </select>
-                <input type="text" value="50,000" class="text-md w-full border rounded-lg py-2 pl-10 pr-4 text-gray-800 focus:ring focus:ring-blue-300">
-            </div>
+    <!-- Hero Section -->
+    <header class="relative mt-10 bg-red-700 text-white py-16 text-center">
+        <h1 class="text-5xl font-bold">About Us</h1>
+        <p class="text-yellow-300 mt-2">Discover who we are and what we do.</p>
+    </header>
 
-            <!-- Payment Methods -->
-            <p class="mt-8 text-gray-600 text-md">Choose a Payment Method</p>
-
-            <div class="mt-3 space-y-3 grid gap-2">
-                <!-- Credit/Debit Card Button -->
-                <a href="Payment Contact.html">
-                    <button class="flex items-center justify-between w-full border rounded-lg px-4 py-3 bg-white hover:bg-gray-200 ease-in-out" style="transition: 0.5s;">
-                        <div class="flex items-center space-x-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-600">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75h19.5M2.25 12h19.5M2.25 17.25h10.5"></path>
-                            </svg>
-                            <span class="text-gray-800 font-medium text-xl">Bank Deposit</span>
-                        </div>
-                    </button>
+    <!-- About Section -->
+    <section class="container mx-auto mt-10 mb-20 px-6 py-12 grid md:grid-cols-2 gap-8 items-center max-w-7xl">
+        <div>
+            <h2 class="text-4xl font-bold text-gray-800">What We Do</h2>
+            <p class="text-gray-700 mt-4 leading-relaxed">
+                At husky, we strive to provide innovative solutions that make life easier and more enjoyable. Our team is dedicated to delivering high-quality services tailored to meet the unique needs of our clients.
+            </p>
+            <p class="text-gray-700 mt-4 leading-relaxed">
+                We are committed to excellence, creativity, and customer satisfaction. Whether it's web development, branding, or digital marketing, we aim to exceed expectations and bring ideas to life.
+            </p>
+            <button class="bg-red-600 text-white mt-6 py-3 px-6 rounded-lg hover:bg-red-700 transition">
+                <a href="contact.html">
+                    Reach Out
                 </a>
-
-
-                <!-- Bank Transfer Button (Highlighted) -->
-                <a href="Payment Contact.html" class="my-10">
-                    <button class="flex items-center justify-between w-full border rounded-lg px-4 py-3 bg-white hover:bg-gray-200 ease-in-out" style="transition: 0.5s;">
-                        <div class="flex items-center space-x-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-600">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25m-7.5 0V9M3 21h18m-9-6v6m-9-12h18L12 3 3 9z"></path>
-                            </svg>
-                            <span class="text-gray-800 font-medium text-xl">Online Transfer</span>
-                        </div>
-                    </button>
-                </a>
-
-
-                <!-- Pay with Account Button -->
-                <a href="Payment Contact.html">
-                    <button class="flex items-center justify-between w-full border rounded-lg px-4 py-3 bg-white hover:bg-gray-200 ease-in-out" style="transition: 0.5s;">
-                        <div class="flex items-center space-x-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-600">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M3 10.5h18M4.5 6h15M3 18h18"></path>
-                            </svg>
-                            <span class="text-gray-800 font-medium text-xl">Western Union</span>
-                        </div>
-                    </button>
-                </a>
-
-            </div>
+            </button>
         </div>
-    </div>
+        <div class="flex justify-center">
+            <img src="./assets/background-checks-in-Canada.png" alt="Team Image" class="">
+        </div>
+    </section>
 
 
     <!-- Footer -->
@@ -98,7 +68,7 @@
         <!-- Large Screen Footer -->
         <div class="hidden lg:block ">
             <div class="flex flex-col items-center py-6">
-                <img src="assets/huskylogo-red.svg" class="w-64 mb-2">
+                <img src="./assets/huskylogo-red.svg" class="w-64 mb-2">
             </div>
             <footer class="flex flex-col items-center justify-center text-left bg-white py-8">
                 <div class="flex justify-between w-4/5 max-w-6xl">
@@ -181,7 +151,7 @@
         <!-- Small Screen Footer -->
         <div class="lg:hidden bg-white text-center py-6 border-t-2 border-gray-300 mt-20">
             <div class="flex flex-col items-center py-6">
-                <img src="assets/huskylogo-red.svg" class="w-52 mb-2">
+                <img src="./assets/huskylogo-red.svg" class="w-52 mb-2">
             </div>
 
             <div class="space-y-2 w-full px-4 py-4">
@@ -223,7 +193,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
