--- a/job listings/jobs 3.html
+++ b/job listings/jobs 3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <script src="script.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
@@ -33,6 +35,8 @@
         </div>
     </nav>
 
+    </div>
+
     <!-- Job Listings -->
     <section class="max-w-6xl mx-auto p-6">
         <h2 class="text-2xl font-semibold mb-4">Job Openings</h2>
@@ -41,23 +45,23 @@
         <div id="job-listings" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
             <!-- Job Listings with unique details -->
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">CNC & VMC Operator</h3>
+                <h3 class="text-lg font-bold">Maintenance worker</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> $80,000/year</p>
+                <p><strong>Salary:</strong> $60,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">CNC Programmer</h3>
+                <h3 class="text-lg font-bold">Bookkeeping</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $60,000/year</p>
+                <p><strong>Salary:</strong> $50,000/year</p>
                 <p><strong>Type:</strong> Part-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Helper</h3>
+                <h3 class="text-lg font-bold">Accounting</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
                 <p><strong>Salary:</strong> $50,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
@@ -65,63 +69,63 @@
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Office boy / Girl</h3>
+                <h3 class="text-lg font-bold">Audit Clerk</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $95,000/year</p>
+                <p><strong>Salary:</strong> $49,000/year</p>
                 <p><strong>Type:</strong> Contract</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Heavy driver</h3>
+                <h3 class="text-lg font-bold">Financial Manager</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $70,000/year</p>
+                <p><strong>Salary:</strong> $130,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Time Keeper</h3>
+                <h3 class="text-lg font-bold">Dental Assistant</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> £45,000/year</p>
+                <p><strong>Salary:</strong> $50,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Safety Officer</h3>
+                <h3 class="text-lg font-bold">Supervisor</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $85,000/year</p>
+                <p><strong>Salary:</strong> $,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Database Administrator</h3>
+                <h3 class="text-lg font-bold">Marketing Manager</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> R600,000/year</p>
+                <p><strong>Salary:</strong> $98,000/year</p>
                 <p><strong>Type:</strong> Permanent</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Software Developer</h3>
+                <h3 class="text-lg font-bold">Patrol Officer</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $70,000/year</p>
+                <p><strong>Salary:</strong> $,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Mechanical Engineer</h3>
+                <h3 class="text-lg font-bold">Financial Analyst</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> £45,000/year</p>
+                <p><strong>Salary:</strong> $77,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">IT Manager</h3>
+                <h3 class="text-lg font-bold">Clinical Social Worker</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
                 <p><strong>Salary:</strong> $85,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
@@ -129,9 +133,9 @@
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Respiratory Therapist</h3>
+                <h3 class="text-lg font-bold">Manager</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> R600,000/year</p>
+                <p><strong>Salary:</strong> $80,000/year</p>
                 <p><strong>Type:</strong> Permanent</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -140,8 +144,8 @@
         <!-- Pagination -->
         <div class="flex justify-center mt-6 space-x-2">
             <a href="../jobs 1.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">1</a>
-            <a href="#" class="px-4 py-2 bg-red-300 text-gray-700 rounded">2</a>
-            <a href="jobs 3.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">3</a>
+            <a href="jobs 2.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">2</a>
+            <a href="#" class="px-4 py-2 bg-red-300 text-gray-700 rounded">3</a>
             <a href="jobs 4.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">4</a>
             <a href="jobs 5.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">5</a>
             <a href="jobs 6.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">6</a>
@@ -206,10 +210,18 @@
                 </div>
 
                 <div class="flex space-x-4 mt-6 text-gray-600 text-xl">
-                    <a href="#"><div class="bi bi-facebook"></div></a>
-                    <a href="#"><div class="bi bi-twitter"></div></a>
-                    <a href="#"><div class="bi bi-instagram"></div></a>
-                    <a href="#"><div class="bi bi-linkedin"></div></a>
+                    <a href="#">
+                        <div class="bi bi-facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-twitter"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-instagram"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-linkedin"></div>
+                    </a>
                 </div>
 
                 <div class="mt-4 text-gray-700 text-sm">
@@ -228,7 +240,7 @@
         <!-- Small Screen Footer -->
         <div class="lg:hidden bg-white text-center py-6 border-t-2 border-gray-300 mt-20">
             <div class="flex flex-col items-center py-6">
-                <img src="assets/huskylogo-red.svg" class="w-52 mb-2">
+                <img src="../assets/huskylogo-red.svg" class="w-52 mb-2">
             </div>
 
             <div class="space-y-2 w-full px-4 py-4">
@@ -272,14 +284,15 @@
     </footer>
 
 
-<script>
-// navbar popup
-const menuBtn = document.getElementById('menu-btn');
-const mobileMenu = document.getElementById('mobile-menu');
+    <script>
+        // navbar popup
+        const menuBtn = document.getElementById('menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
 
-menuBtn.addEventListener('click', () => {
-    mobileMenu.classList.toggle('hidden');      
-});
-</script>
+        menuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
 </body>
+
 </html>
