--- a/job listings/jobs 4.html
+++ b/job listings/jobs 4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <script src="script.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-100">
     <!-- Navbar -->
     <nav class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
@@ -41,39 +43,39 @@
         <div id="job-listings" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
             <!-- Job Listings with unique details -->
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Administrator</h3>
+                <h3 class="text-lg font-bold">Nursing Aide</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> $80,000/year</p>
+                <p><strong>Salary:</strong> $44,500/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Store Manager</h3>
+                <h3 class="text-lg font-bold">Cashier</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $60,000/year</p>
+                <p><strong>Salary:</strong> $32,000/year</p>
                 <p><strong>Type:</strong> Part-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Store Kipper</h3>
+                <h3 class="text-lg font-bold">Sales Representative</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> $50,000/year</p>
+                <p><strong>Salary:</strong> $58,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Electrical technician</h3>
+                <h3 class="text-lg font-bold">Sales Manager</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $95,000/year</p>
+                <p><strong>Salary:</strong> $108,000/year</p>
                 <p><strong>Type:</strong> Contract</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Safety Officer</h3>
+                <h3 class="text-lg font-bold">Plumber</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
                 <p><strong>Salary:</strong> $70,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
@@ -81,49 +83,89 @@
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">CNC Operator</h3>
+                <h3 class="text-lg font-bold">Engineer</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> £45,000/year</p>
+                <p><strong>Salary:</strong> $95,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Helper</h3>
+                <h3 class="text-lg font-bold">Customer Service</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $85,000/year</p>
+                <p><strong>Salary:</strong> $45,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">NDT or QC Inspector</h3>
+                <h3 class="text-lg font-bold">Driver</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> R600,000/year</p>
+                <p><strong>Salary:</strong> $52,500/year</p>
                 <p><strong>Type:</strong> Permanent</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Civil Engineer</h3>
-                <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> £45,000/year</p>
-                <p><strong>Type:</strong> Full-time</p>
-                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
-            </div>
-
-            <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Forklift Operator</h3>
+                <h3 class="text-lg font-bold">Restaurant Cook</h3>
                 <p><strong>Location:</strong> Ontario, Canada</p>
-                <p><strong>Salary:</strong> $85,000/year</p>
+                <p><strong>Salary:</strong> $43,000/year</p>
                 <p><strong>Type:</strong> Full-time</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-                <h3 class="text-lg font-bold">Shover Operator</h3>
+                <h3 class="text-lg font-bold">Chef</h3>
                 <p><strong>Location:</strong> Toronto, Canada</p>
-                <p><strong>Salary:</strong> R600,000/year</p>
+                <p><strong>Salary:</strong> $61,000/year</p>
+                <p><strong>Type:</strong> Full-time</p>
+                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
+            </div>
+
+            <div class="bg-white p-4 shadow-md rounded-lg">
+                <h3 class="text-lg font-bold">Reception</h3>
+                <p><strong>Location:</strong> Ontario, Canada</p>
+                <p><strong>Salary:</strong> $35,000/year</p>
+                <p><strong>Type:</strong> Full-time</p>
+                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
+            </div>
+
+            <div class="bg-white p-4 shadow-md rounded-lg">
+                <h3 class="text-lg font-bold">Plainter</h3>
+                <p><strong>Location:</strong> Toronto, Canada</p>
+                <p><strong>Salary:</strong> $59,000/year</p>
+                <p><strong>Type:</strong> Permanent</p>
+                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
+            </div>
+
+            <div class="bg-white p-4 shadow-md rounded-lg">
+                <h3 class="text-lg font-bold">Sports Coach</h3>
+                <p><strong>Location:</strong> Ontario, Canada</p>
+                <p><strong>Salary:</strong> $54,000/year</p>
+                <p><strong>Type:</strong> Full-time</p>
+                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
+            </div>
+
+            <div class="bg-white p-4 shadow-md rounded-lg">
+                <h3 class="text-lg font-bold">Teacher</h3>
+                <p><strong>Location:</strong> Toronto, Canada</p>
+                <p><strong>Salary:</strong> $75,000/year</p>
+                <p><strong>Type:</strong> Full-time</p>
+                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
+            </div>
+
+            <div class="bg-white p-4 shadow-md rounded-lg">
+                <h3 class="text-lg font-bold">Cashier</h3>
+                <p><strong>Location:</strong> Ontario, Canada</p>
+                <p><strong>Salary:</strong> $38,000/year</p>
+                <p><strong>Type:</strong> Full-time</p>
+                <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
+            </div>
+
+            <div class="bg-white p-4 shadow-md rounded-lg">
+                <h3 class="text-lg font-bold">Janitor</h3>
+                <p><strong>Location:</strong> Toronto, Canada</p>
+                <p><strong>Salary:</strong> $38,000/year</p>
                 <p><strong>Type:</strong> Permanent</p>
                 <a href="../apply.html"><button class="mt-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Apply Now</button></a>
             </div>
@@ -134,9 +176,9 @@
             <a href="../jobs 1.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">1</a>
             <a href="jobs 2.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">2</a>
             <a href="jobs 3.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">3</a>
-            <a href="jobs 4.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">4</a>
+            <a href="#" class="px-4 py-2 bg-red-300 text-gray-700 rounded">4</a>
             <a href="jobs 5.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">5</a>
-            <a href="#" class="px-4 py-2 bg-red-300 text-gray-700 rounded">6</a>
+            <a href="jobs 6.html" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">6</a>
         </div>
     </section>
 
@@ -198,10 +240,18 @@
                 </div>
 
                 <div class="flex space-x-4 mt-6 text-gray-600 text-xl">
-                    <a href="#"><div class="bi bi-facebook"></div></a>
-                    <a href="#"><div class="bi bi-twitter"></div></a>
-                    <a href="#"><div class="bi bi-instagram"></div></a>
-                    <a href="#"><div class="bi bi-linkedin"></div></a>
+                    <a href="#">
+                        <div class="bi bi-facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-twitter"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-instagram"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-linkedin"></div>
+                    </a>
                 </div>
 
                 <div class="mt-4 text-gray-700 text-sm">
@@ -264,14 +314,15 @@
     </footer>
 
 
-<script>
-// navbar popup
-const menuBtn = document.getElementById('menu-btn');
-const mobileMenu = document.getElementById('mobile-menu');
+    <script>
+        // navbar popup
+        const menuBtn = document.getElementById('menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
 
-menuBtn.addEventListener('click', () => {
-    mobileMenu.classList.toggle('hidden');      
-});
-</script>
+        menuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
 </body>
+
 </html>
