--- a/payment method.html
+++ b/payment method.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pricing Plans</title>
+    <title>Deposit Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gray-100 ">
+<body class="">
+
     <!-- Navbar -->
     <nav class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
@@ -34,82 +35,59 @@
         </div>
     </nav>
 
-    <div class="flex items-center justify-center min-h-screen p-5">
-        <div class="container mx-auto">
-            <h1 class="text-gray-900 text-4xl font-bold text-center mb-8">Choose Your Plan</h1>
+    <div class="flex items-center justify-center min-h-screen bg-gray-100">
+        <div class="bg-white shadow-md rounded-lg p-10 w-full max-w-sm">
+            <!-- Amount Input -->
+            <label class="block text-gray-600 text-md mb-2">How much do you want to deposit?</label>
+            <div class="relative">
+                <select class="absolute left-3 top-1/2 transform -translate-y-1/2 bg-transparent text-gray-600 focus:outline-none">
+                    <option selected>$</option>
+                </select>
+                <input type="text" value="00.00" class="text-md w-full border rounded-lg py-2 pl-10 pr-4 text-gray-800 focus:ring focus:ring-blue-300">
+            </div>
 
-            <div class="grid md:grid-cols-3 gap-8">
-                <!-- Pricing Card 1 -->
-                <div class="bg-white text-gray-900 p-6 rounded-lg shadow-lg">
-                    <h2 class="text-2xl font-bold text-center">Basic Plan</h2>
-                    <p class="text-center text-gray-800 text-xl mt-2">$99.99 / month</p>
-                    <ul class="mt-4 space-y-3">
-                        <li class="flex items-center">
-                            ✅ Feature One
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Two
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Three
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Four
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Five
-                        </li>
-                    </ul>
-                    <a href="payment method.html"><button class="w-full mt-6 bg-red-500 hover:bg-red-600 text-white py-2 rounded-lg">Pay Now</button></a>
-                </div>
+            <!-- Payment Methods -->
+            <p class="mt-8 text-gray-600 text-md">Choose a Payment Method</p>
 
-                <!-- Pricing Card 2 -->
-                <div class="bg-white text-gray-900 p-6 rounded-lg shadow-lg scale-110">
-                    <h2 class="text-2xl font-bold text-center">Standard Plan</h2>
-                    <p class="text-center text-gray-800 text-xl mt-2">$199.99 / month</p>
-                    <ul class="mt-4 space-y-3">
-                        <li class="flex items-center">
-                            ✅ Feature One
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Two
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Three
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Four
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Five
-                        </li>
-                    </ul>
-                    <a href="payment method.html"><button class="w-full mt-6 bg-red-500 hover:bg-red-600 text-white py-2 rounded-lg">Pay Now</button></a>
-                </div>
+            <div class="mt-3 space-y-3 grid gap-2">
+                <!-- Credit/Debit Card Button -->
+                <a href="Payment Contact.html">
+                    <button class="flex items-center justify-between w-full border rounded-lg px-4 py-3 bg-white hover:bg-gray-200 ease-in-out" style="transition: 0.5s;">
+                        <div class="flex items-center space-x-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-600">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75h19.5M2.25 12h19.5M2.25 17.25h10.5"></path>
+                            </svg>
+                            <span class="text-gray-800 font-medium text-xl">Bank Deposit</span>
+                        </div>
+                    </button>
+                </a>
 
-                <!-- Pricing Card 3 -->
-                <div class="bg-white text-gray-900 p-6 rounded-lg shadow-lg">
-                    <h2 class="text-2xl font-bold text-center">Premium Plan</h2>
-                    <p class="text-center text-gray-800 text-xl mt-2">$299.99 / month</p>
-                    <ul class="mt-4 space-y-3">
-                        <li class="flex items-center">
-                            ✅ Feature One
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Two
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Three
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Four
-                        </li>
-                        <li class="flex items-center">
-                            ✅ Feature Five
-                        </li>
-                    </ul>
-                    <a href="payment method.html"><button class="w-full mt-6 bg-red-500 hover:bg-red-600 text-white py-2 rounded-lg">Pay Now</button></a>
-                </div>
+
+                <!-- Bank Transfer Button (Highlighted) -->
+                <a href="Payment Contact.html" class="my-10">
+                    <button class="flex items-center justify-between w-full border rounded-lg px-4 py-3 bg-white hover:bg-gray-200 ease-in-out" style="transition: 0.5s;">
+                        <div class="flex items-center space-x-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-600">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25m-7.5 0V9M3 21h18m-9-6v6m-9-12h18L12 3 3 9z"></path>
+                            </svg>
+                            <span class="text-gray-800 font-medium text-xl">Online Transfer</span>
+                        </div>
+                    </button>
+                </a>
+
+
+                <!-- Pay with Account Button -->
+                <a href="Payment Contact.html">
+                    <button class="flex items-center justify-between w-full border rounded-lg px-4 py-3 bg-white hover:bg-gray-200 ease-in-out" style="transition: 0.5s;">
+                        <div class="flex items-center space-x-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-600">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M3 10.5h18M4.5 6h15M3 18h18"></path>
+                            </svg>
+                            <span class="text-gray-800 font-medium text-xl">Western Union</span>
+                        </div>
+                    </button>
+                </a>
+
             </div>
         </div>
     </div>
@@ -120,7 +98,7 @@
         <!-- Large Screen Footer -->
         <div class="hidden lg:block ">
             <div class="flex flex-col items-center py-6">
-                <img src="assets/huskylogo-red.svg" class="w-64 mb-2">
+                <img src="./assets/huskylogo-red.svg" class="w-64 mb-2">
             </div>
             <footer class="flex flex-col items-center justify-center text-left bg-white py-8">
                 <div class="flex justify-between w-4/5 max-w-6xl">
@@ -203,7 +181,7 @@
         <!-- Small Screen Footer -->
         <div class="lg:hidden bg-white text-center py-6 border-t-2 border-gray-300 mt-20">
             <div class="flex flex-col items-center py-6">
-                <img src="assets/huskylogo-red.svg" class="w-52 mb-2">
+                <img src="./assets/huskylogo-red.svg" class="w-52 mb-2">
             </div>
 
             <div class="space-y-2 w-full px-4 py-4">
