--- a/price.html
+++ b/price.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Glazzom</title>
+    <title>Pricing Plans</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
 
+<body class="bg-gray-100 ">
     <!-- Navbar -->
     <nav class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-red-600 font-bold text-xl">
+            <a href="./index.html" class="text-red-600 font-bold text-xl">
                 <img src="./assets/huskylogo-red.svg" class="w-40 h-30" alt="Husky Logo">
             </a>
             <!-- Desktop Menu -->
@@ -33,32 +34,85 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <header class="relative mt-10 bg-red-700 text-white py-16 text-center">
-        <h1 class="text-5xl font-bold">About Us</h1>
-        <p class="text-yellow-300 mt-2">Discover who we are and what we do.</p>
-    </header>
+    <div class="flex items-center justify-center min-h-screen p-5">
+        <div class="container mx-auto">
+            <h1 class="text-gray-900 text-4xl font-bold text-center mb-8">Choose Your Plan</h1>
 
-    <!-- About Section -->
-    <section class="container mx-auto mt-10 mb-20 px-6 py-12 grid md:grid-cols-2 gap-8 items-center max-w-7xl">
-        <div>
-            <h2 class="text-4xl font-bold text-gray-800">What We Do</h2>
-            <p class="text-gray-700 mt-4 leading-relaxed">
-                At husky, we strive to provide innovative solutions that make life easier and more enjoyable. Our team is dedicated to delivering high-quality services tailored to meet the unique needs of our clients.
-            </p>
-            <p class="text-gray-700 mt-4 leading-relaxed">
-                We are committed to excellence, creativity, and customer satisfaction. Whether it's web development, branding, or digital marketing, we aim to exceed expectations and bring ideas to life.
-            </p>
-            <button class="bg-red-600 text-white mt-6 py-3 px-6 rounded-lg hover:bg-red-700 transition">
-                <a href="contact.html">
-                    Reach Out
-                </a>
-            </button>
+            <div class="grid md:grid-cols-3 gap-8">
+                <!-- Pricing Card 1 -->
+                <div class="bg-white text-gray-900 p-6 rounded-lg shadow-lg">
+                    <h2 class="text-2xl font-bold text-center">Basic Plan</h2>
+                    <p class="text-center text-gray-800 text-xl mt-2">$299.99 / 2 years</p>
+                    <ul class="mt-4 space-y-3">
+                        <li class="flex items-center">
+                            ✅ Access to job listings
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Basic resume upload
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Limited application tracking
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Biometric fee
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Basic career resourse
+                        </li>
+                    </ul>
+                    <a href="payment method.html"><button class="w-full mt-6 bg-red-500 hover:bg-red-600 text-white py-2 rounded-lg">Pay Now</button></a>
+                </div>
+
+                <!-- Pricing Card 2 -->
+                <div class="bg-white text-gray-900 p-6 rounded-lg shadow-lg scale-110">
+                    <h2 class="text-2xl font-bold text-center">Standard Plan</h2>
+                    <p class="text-center text-gray-800 text-xl mt-2">$399.99 / 3 years</p>
+                    <ul class="mt-4 space-y-3">
+                        <li class="flex items-center">
+                            ✅ Advanced job search fliters
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Resume optimization tools
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Application tracking and notification
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Biometric fee
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Personalized job recommendation
+                        </li>
+                    </ul>
+                    <a href="payment method.html"><button class="w-full mt-6 bg-red-500 hover:bg-red-600 text-white py-2 rounded-lg">Pay Now</button></a>
+                </div>
+
+                <!-- Pricing Card 3 -->
+                <div class="bg-white text-gray-900 p-6 rounded-lg shadow-lg">
+                    <h2 class="text-2xl font-bold text-center">Premium Plan</h2>
+                    <p class="text-center text-gray-800 text-xl mt-2">$499.99 / 4 years</p>
+                    <ul class="mt-4 space-y-3">
+                        <li class="flex items-center">
+                            ✅ Priority application review
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Personalized job matching
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Advanced resume review and feedback
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Biometric fee
+                        </li>
+                        <li class="flex items-center">
+                            ✅ Dedicated career coaching support
+                        </li>
+                    </ul>
+                    <a href="payment method.html"><button class="w-full mt-6 bg-red-500 hover:bg-red-600 text-white py-2 rounded-lg">Pay Now</button></a>
+                </div>
+            </div>
         </div>
-        <div class="flex justify-center">
-            <img src="assets/background-checks-in-Canada.png" alt="Team Image" class="">
-        </div>
-    </section>
+    </div>
 
 
     <!-- Footer -->
@@ -119,10 +173,18 @@
                 </div>
 
                 <div class="flex space-x-4 mt-6 text-gray-600 text-xl">
-                    <a href="#"><div class="bi bi-facebook"></div></a>
-                    <a href="#"><div class="bi bi-twitter"></div></a>
-                    <a href="#"><div class="bi bi-instagram"></div></a>
-                    <a href="#"><div class="bi bi-linkedin"></div></a>
+                    <a href="#">
+                        <div class="bi bi-facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-twitter"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-instagram"></div>
+                    </a>
+                    <a href="#">
+                        <div class="bi bi-linkedin"></div>
+                    </a>
                 </div>
 
                 <div class="mt-4 text-gray-700 text-sm">
@@ -183,5 +245,7 @@
             </div>
         </div>
     </footer>
+
 </body>
+
 </html>
